ISS-11-17-49 - Fixed Spacing below Main Hero Box & Form Styling Adjustments

--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -71,11 +71,14 @@
     z-index: 1;
   }
 
-
+  [data-module=PageSubnav] {
+    background-color: var(--white);
+    border-top-left-radius: 40px;
+  }
 
   .hpp-dtc-m-hero.sign-up-hero .content {
     /* margin-top: 30rem; */
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
     padding: 0 15px;
   }
 
@@ -84,7 +87,7 @@
   } */
 
   .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
-    margin-top: 6rem;
+    margin-top: 4rem;
     position: relative;
     left: 0;
   }
@@ -94,6 +97,7 @@
     margin-top: 25px;
     max-width: 1100px;
     padding: 0;
+    padding-bottom: 100px;
   }
 
 }
